2002-10-25  Andrew Cagney  <cagney@redhat.com>

	* complaints.h (struct deprecated_complaint): Rename `struct
	complaint'.
	* complaints.c (complain): Update.
	* remote-vx68.c, remote-vxmips.c, remote-vxsparc.c: Delete
	incorrect comment indicating that "symfile.h" was being included
	for the `struct complaint' definition.
	* remote-vx.c: Update.
	* objc-lang.c: Update.
	* xcoffread.c: Update.
	* hpread.c: Update.
	* mdebugread.c: Update.
	* stabsread.c: Update.
	* dwarf2read.c: Update.
	* dwarfread.c: Update.
	* elfread.c: Update.
	* coffread.c: Update.
	* stabsread.h: Update.
	* dbxread.c: Update.
	* buildsym.c: Update.
	* gdbtypes.c: Update.
	* macrotab.c: Update.

2002-10-25  Mark Kettenis  <kettenis@gnu.org>

	* x86-64-tdep.c (x86_64_gdbarch_init): Make a bit more similar to
	the version in i386-tdep.c.  Move set_gdbarch_* calls out into...
	(x86_64_init_abi): ...new function.

	* Makefile.in (i386v-nat.o): Add $(i386_tdep_h).
	* i386v-nat.c: Include "i386-tdep.h".

2002-10-25  Andrew Cagney  <cagney@redhat.com>

	* gdbtypes.c (address_space_name_to_int): Update.
	(address_space_int_to_name): Update.
	* gdbarch.sh (address_class_type_flags_to_name): Change to a pure
	multi-arch predicate.
	(address_class_name_to_type_flags): Ditto.
	* gdbarch.h, gdbarch.c: Re-generate.
	
	* MAINTAINERS: Check all warnings when h8300hms and alpha-elf.

2002-10-24  Martin M. Hunt  <hunt@redhat.com>

	* utils.c (string_to_core_addr): Revert patch from 11 Oct.

2002-10-24  Elena Zannoni  <ezannoni@redhat.com>

	* symtab.h (INIT_SAL): Delete macro.
	(init_sal): Export.
	* symtab.c (init_sal): New function.

	* ada-lang.c (ada_finish_decode_line_1): Change INIT_SAL macro
	to init_sal function call.
	(find_sal_from_funcs_and_line): Ditto.
	(all_sals_for_line): Ditto. 
	* breakpoint.c (create_internal_breakpoint): Ditto. 
	(create_fork_vfork_event_catchpoint): Ditto. 
	(create_exec_event_catchpoint): Ditto. 
	(parse_breakpoint_sals): Ditto. 
	(watch_command_1): Ditto. 