@@ -1,3 +1,10 @@
+2002-10-26  Mark Kettenis  <kettenis@gnu.org>
+
+	* x86-64-tdep.c (x86_64_breakpoint_from_pc): Constify.
+	(x86_64_init_abi): Move set_gdbarch_* calls that overlap with the
+	i386 target back into x86_64_gdbarch_init.  Add some comments and
+	remove meaningless ones.
+
 2002-10-25  Andrew Cagney  <cagney@redhat.com>
 
 	* complaints.h (struct deprecated_complaint): Rename `struct
